# SoloSoul_plugin_market

./: README.md  registry.json
.githooks/: pre-commit
.github/workflows/: update-registry.yml  validate-registry.yml
SDK/rust/: Cargo.toml
SDK/schema/: manifest.schema.json
docs/: plugin-ideas.md
examples/hello_world/: Cargo.toml  manifest.json
plugins/com.solosoul.official.address-fmt/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.calendar-events/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.contact-exporter/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.data-completeness/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.data-completeness/src/: lib.rs
plugins/com.solosoul.official.digital-will/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.doc-checklist/: Cargo.toml  manifest.json  plugin.wasm  scenarios.json
plugins/com.solosoul.official.doc-checklist/src/: lib.rs
plugins/com.solosoul.official.emergency-card/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.expiry-guardian/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.form-prefiller/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.id-validator/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.identity-timeline/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.identity-timeline/src/: lib.rs
plugins/com.solosoul.official.mrz-encoder/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.namecard-gen/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.packing-list/: Cargo.toml  (+2 more)
plugins/com.solosoul.official.totp-gen/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.totp-gen/src/: lib.rs
plugins/com.solosoul.official.travel-footprint/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.travel-footprint/release/: travel_footprint.wasm
plugins/com.solosoul.official.travel-footprint/src/: lib.rs
plugins/com.solosoul.official.watermark/: Cargo.toml  manifest.json  plugin.wasm
plugins/com.solosoul.official.watermark/src/: lib.rs
scripts/: generate_registry.py  install-hooks.sh  patch_tiers.py
(+31 files in other folders)
