[package]
name = "totp-gen"
version = "1.0.2"
edition = "2021"
authors = ["SoloSoul Official"]
description = "TOTP Generator — Generate RFC 6238 time-based one-time passwords from Vault secrets"

[dependencies]
solosoul-plugin-sdk = { path = "../../SDK/rust" }
hmac = "0.12"
sha-1 = "0.10"

[lib]
crate-type = ["cdylib"]
