[package]
name = "travel-footprint"
version = "1.0.2"
edition = "2021"
authors = ["SoloSoul Official"]
description = "Travel Footprint — Analyze travel history and generate country visit statistics"

[dependencies]
solosoul-plugin-sdk = { path = "../../SDK/rust" }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
